--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "jest",
+    "test": "jest --env=jsdom",
     "start": "webpack serve --open",
     "build": "webpack"
   },
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Rachelwebdev/JavaScriptCapstone#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
@@ -28,6 +29,8 @@
     "hint": "^7.1.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.2",
+    "jsdom": "^21.1.0",
     "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -325,7 +328,6 @@
     "js-library-detector": "^6.6.0",
     "js-tokens": "^4.0.0",
     "js-yaml": "^3.14.1",
-    "jsdom": "^20.0.3",
     "jsesc": "^2.5.2",
     "json-buffer": "^3.0.1",
     "json-parse-even-better-errors": "^2.3.1",
